--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -78,17 +78,17 @@ input[type="text"]:disabled, input[type="password"]:disabled, input[type="number
 
 /* input checkbox */
 input[type="checkbox"]{position:absolute;top:0;left:0;width:0;height:0;line-height:0;padding:0;border:0;overflow:hidden;}
-input[type="checkbox"] + label{min-height:22px;padding-left:30px;background:url('../img/chk.png') no-repeat 0 0;}
-input[type="checkbox"]:checked + label{background-image:url('../img/chk_checked.png');}
-input[type="checkbox"]:disabled + label{background-image:url('../img/chk_disable.png');}
-input[type="checkbox"]:checked:disabled + label{background-image:url('../img/chk_checked_disable.png');}
+input[type="checkbox"] + label{min-height:22px;padding-left:30px;background:url('../img/form_chk.png') no-repeat 0 0;}
+input[type="checkbox"]:checked + label{background-position-y:-25px;}
+input[type="checkbox"]:disabled + label{background-position-y:-50px;}
+input[type="checkbox"]:checked:disabled + label{background-position-y:-75px;}
 
 /* input radio */
 input[type="radio"]{position:absolute;top:0;left:0;width:0;height:0;line-height:0;padding:0;border:0;overflow:hidden;}
-input[type="radio"] + label{min-height:22px;padding-left:30px;background:url('../img/rdo.png') no-repeat 0 0;}
-input[type="radio"]:checked + label{background-image:url('../img/rdo_checked.png');}
-input[type="radio"]:disabled + label{background-image:url('../img/rdo_disable.png');}
-input[type="radio"]:checked:disabled + label{background-image:url('../img/rdo_checked_disable.png');}
+input[type="radio"] + label{min-height:22px;padding-left:30px;background:url('../img/form_rdo.png') no-repeat 0 0;}
+input[type="radio"]:checked + label{background-position-y:-25px;}
+input[type="radio"]:disabled + label{background-position-y:-50px;}
+input[type="radio"]:checked:disabled + label{background-position-y:-75px;}
 
 /* input[type="search"] (input + 검색버튼) */
 .inputbox{display:inline-block;position:relative;width:100%;height:36px;margin-left:1%;padding-right:40px;vertical-align:middle;border:1px solid #e6e6e6;}
