--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -35,6 +35,7 @@
 .btn-wrap:after{display:block;content:'';clear:both;}
 .btn-wrap .btn{min-width:80px;}
 .btn{display:inline-block;height:36px;line-height:34px;margin-left:7px;padding:0 12px;background:#fff;color:#326dc2;font-size:13px;text-align:center;vertical-align:middle;border:1px solid #326dc2;border-radius:5px;}
+.btn:disabled{background:#f3f3f3 !important;color:#aea7a2 !important;border:1px solid #ccc !important;}
 .btn:first-child{margin-left:0;}
 .btn.white{background:#fff;color:#666;border:1px solid #ccc;}
 .btn.gray{background:#666;color:#fff;border:1px solid #666;}
